# tech_math

./: .gitignore  README.md
aam/h1/: h1_hoenigmann.tex
aam/h2/: h2_hoenigmann.tex
aam/h3/: h3_hoenigmann.tex
aam/h4/: h4_hoenigmann.tex
aduct/HW2/: f1.z3  f2.z3
aduct/HW3/: problem42_1.tptp  problem42_2.tptp  problem44.tptp
aduct/hw_1/: HW1-3-a.in  HW1-3-b.in  HW1-3-c.in
aduct/lecture_notes/: cheat_sheet.tex  document.tex
alg/honig/: Scan07082022120522.xopp
alg/ue2/: document.tex
ana1/ue4/: ana_ue4-1.xcf  ana_ue4-2.xcf  ana_ue4-3.xcf  ana_ue4-4.xcf  ana_ue4-5.xcf  ana_ue4-8.xcf
ana1/ue9/: small_corrections.txt
ana1/zusammenfassungen/: zusammenfassung_heft_1_ana.tex  zusammenfassung_heft_2_ana.tex  zusammenfassung_heft_3_ana.tex
ana2/ue2/: notes.txt
ana2/ue3/: notes.txt
ana2/ue5/: notes.txt
ana2/ue7/: notes.txt
ana3/ue10/: bsp_1.xcf  bsp_2.xcf  document.tex
ana3/zusammenfassung/: document.tex
cagd/lecture_notes/: document.tex  short_cagd.tex
cagd/ue1/: approx_circle_2.py  approx_circle_3.py  bernstein.py  bez.py  casteljau.py  find_quad_bezier.py  main.py
cagd/ue3/: obj_to_center_of_mass.py
cagd/ue4/: catmull_clark.py  chaikin.py  doo_sabin.py  halfedge.py  lane_riesenfeld.py  loop.py  mesh_to_quad_mesh.py  nurbs_circle.py  (+2 more)
eprog/serie12/: CMakeLists.txt
eprog/serie12/Account/: Account.cpp  Account.h  Bank.cpp  Bank.h  main.cpp
eprog/serie12/Person/: Person.cpp  Person.h  main.cpp
eprog/serie12/ReducedMatrix/: ReducedMatrix.cpp  ReducedMatrix.h  main.cpp
sem/: document.bib  document.tex
stadtplanung/: pruefungsfragen.tex
(+341 files in other folders)
